--- a/nameless_game/base/templates/base/index.html
+++ b/nameless_game/base/templates/base/index.html
@@ -4,14 +4,15 @@
 <div id="content_container">
     <div id="content_wrapper">
         <h1 style="margin: auto; width: 50%; text-align: center">Game Home Page</h1>
-        <p>Play the Game! <-- once I actually upload it...</p>
+        <p>Play the <a href="play/">Game!</a></p>
         <p>View <a href="characters/">Characters</a></p>
         <p>View <a href="mobs/">Mobs</a></p>
         <h2>TO DO:</h2>
         <li>Add non-admin based character add/edit</li>
-        <li>Add non-admin based mob add/edit</li>
+        <li><strong>Add non-admin based mob add/edit</strong></li>
+        <li><strong>Overhaul game.js to use mob data from server</strong></li>
         <li>Add first equipment</li>
-        <li>Add the actual game...fix up CSS/JS to work with new "static" structure</li>
+        <li><s>Add the actual game...fix up CSS/JS to work with new "static" structure</s></li>
         <li>Develop game further</li>
         <li>Prettify the home page?</li>
     </div>
