--- a/nameless_game/base/static/base/css/base.css
+++ b/nameless_game/base/static/base/css/base.css
@@ -4,7 +4,7 @@
     margin: 0;
 }
 #content_wrapper{
-    width: 1400px;
+    width: 90%;
     max-width: 100vw;
     padding-top: 1rem;
     margin: 0 auto;
