Mob add/edit update
Added mob adding/editing pages, still some work to do with the URL (first save of a "new" mob leaves you at /new)

--- a/nameless_game/base/templates/base/index.html
+++ b/nameless_game/base/templates/base/index.html
@@ -9,7 +9,8 @@
         <p>View <a href="mobs/">Mobs</a></p>
         <h2>TO DO:</h2>
         <li>Add non-admin based character add/edit</li>
-        <li><strong>Add non-admin based mob add/edit</strong></li>
+        <li><s>Add non-admin based mob add/edit</s></li>
+        <li><strong>Add non-admin based mob DELETE</strong></li>
         <li><strong>Overhaul game.js to use mob data from server</strong></li>
         <li>Add first equipment</li>
         <li><s>Add the actual game...fix up CSS/JS to work with new "static" structure</s></li>
