--- a/react_frontend/src/index.css
+++ b/react_frontend/src/index.css
@@ -11,3 +11,16 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#page{
+  width: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+#content_wrapper{
+  width: 1400px;
+  max-width: 100vw;
+  margin: 0 auto;
+  padding-top: 2rem;
+}
